# one-hundred-tiny-spiders

./: README.md  beet.yaml  pyproject.toml
.github/workflows/: main.yml
src/minecraft/loot_tables/entities/: spider.json
src/minecraft/tags/functions/: load.json  tick.json
src/one_hundred_tiny_spiders/functions/: check_item.mcfunction  load.mcfunction  spawn_tiny_spiders.mcfunction  tick.mcfunction  tick_tiny_spider.mcfunction
